manifests/deployment-labels-kubeadm-control-plane-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capi-kubeadm-control-plane-controller-manager
  namespace: capi-kubeadm-control-plane-system
  labels:
    app.kubernetes.io/component: control-plane-kubeadm
