manifests/deployment-metrics-port-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capi-controller-manager
  namespace: capi-system
spec:
  template:
    spec:
      containers:
        - name: manager
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
