manifests/deployment-metrics-port-kubeadm-bootstrap-controller-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capi-kubeadm-bootstrap-controller-manager
  namespace: capi-kubeadm-bootstrap-system
spec:
  template:
    spec:
      containers:
        - name: manager
          ports:
            - containerPort: 8080
              name: metrics
              protocol: TCP
