manifests/service-add-metrics-port-kubeadm-bootstrap.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: capi-kubeadm-bootstrap-system
  name: capi-kubeadm-bootstrap-webhook-service
spec:
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
    - name: webhook-server
      port: 443
      targetPort: webhook-server
