manifests/service-add-metrics-port.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: capi-system
  name: capi-webhook-service
spec:
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
    - name: webhook-server
      port: 443
      targetPort: webhook-server
