manifests/v1_service_capi-webhook-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ignore
spec:
  ports:
  - name: metrics
    port: 8080
    targetPort: metrics
  - name: webhook-server
    port: 443
    targetPort: webhook-server
