manifests/networkpolicy_capi-kubeadm-control-plane-controller-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: control-plane-kubeadm
    cluster.x-k8s.io/provider: control-plane-kubeadm
    control-plane: controller-manager
  name: capi-kubeadm-control-plane-controller-manager
spec:
  podSelector:
    matchLabels:
      cluster.x-k8s.io/provider: control-plane-kubeadm
      control-plane: controller-manager
  egress:
    - ports:
        - port: 443
          protocol: TCP
        - port: 6443
          protocol: TCP
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
  policyTypes:
    - Egress
